{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 26,
  "lineage": "e900676a-796d-fc30-d5e7-cebf9abbc126",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:627733612952:security-group/sg-066a4be4c81808747",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066a4be4c81808747",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DatabaseSG",
            "name_prefix": "",
            "owner_id": "627733612952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database"
            },
            "tags_all": {
              "Name": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0857984f6c88c4a4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:627733612952:security-group/sg-02b87523614397807",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b87523614397807",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "External-Service",
                "from_port": 30007,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30007
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WordpressSG",
            "name_prefix": "",
            "owner_id": "627733612952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wordpress"
            },
            "tags_all": {
              "Name": "Wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0857984f6c88c4a4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/wordpress",
            "metadata": [
              {
                "generation": 0,
                "name": "wordpress",
                "namespace": "default",
                "resource_version": "1546",
                "uid": "c803d03e-f37b-4ac5-bcff-41a2d53c4f8c"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.137.5",
                "cluster_ips": [
                  "172.20.137.5"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31969,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "30007"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "wordpress"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "ac803d03ef37b4ac5bcff41a2d53c4f8-1837864400.eu-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_db_instance.dbinstance",
            "aws_db_subnet_group.rds_public",
            "aws_eks_cluster.eks_cluster",
            "aws_eks_node_group.eks_ng",
            "aws_iam_role.IAM_role",
            "aws_iam_role_policy_attachment.Cluster-Policy",
            "aws_iam_role_policy_attachment.EC2ContainerRegistryReadOnly",
            "aws_iam_role_policy_attachment.EKS_CNI_Policy",
            "aws_iam_role_policy_attachment.WorkerNodePolicy",
            "aws_security_group.database_sg",
            "aws_security_group.wordpress_sg",
            "kubernetes_deployment.wordpress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:627733612952:internet-gateway/igw-07e952af69f5e08a6",
            "id": "igw-07e952af69f5e08a6",
            "owner_id": "627733612952",
            "tags": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared"
            },
            "vpc_id": "vpc-0857984f6c88c4a4a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07e952af69f5e08a6",
            "id": "r-rtb-09f1e9f98849697e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f1e9f98849697e8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:627733612952:route-table/rtb-09f1e9f98849697e8",
            "id": "rtb-09f1e9f98849697e8",
            "owner_id": "627733612952",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-vpc-public",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-public",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0857984f6c88c4a4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0073202f30a36d2a7",
            "route_table_id": "rtb-09f1e9f98849697e8",
            "subnet_id": "subnet-02fd1c926796ff5bb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d991ac2ba6de5120",
            "route_table_id": "rtb-09f1e9f98849697e8",
            "subnet_id": "subnet-0040f41f0ddecdfec"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:627733612952:subnet/subnet-02fd1c926796ff5bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fd1c926796ff5bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627733612952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0857984f6c88c4a4a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:627733612952:subnet/subnet-0040f41f0ddecdfec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0040f41f0ddecdfec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627733612952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0857984f6c88c4a4a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:627733612952:vpc/vpc-0857984f6c88c4a4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0d41613cd83bc14c5",
            "default_route_table_id": "rtb-06af0ecc0b46adce4",
            "default_security_group_id": "sg-0d4b5ca32c33fd31b",
            "dhcp_options_id": "dopt-088cc0c7b919b3a71",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0857984f6c88c4a4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06af0ecc0b46adce4",
            "owner_id": "627733612952",
            "tags": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/training-eks-EklHEYik": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}